testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash1.errors.txt
a.js(1,2): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
a.js(1,4): error TS1003: Identifier expected.
a.js(2,1): error TS1109: Expression expected.


==== a.js (3 errors) ====
    ~< <
     ~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
       ~
!!! error TS1003: Identifier expected.
    
    
!!! error TS1109: Expression expected.